fixed responsiveness issues on mobile screen

--- a/Sass/app.sass
+++ b/Sass/app.sass
@@ -11,7 +11,7 @@
 
     .tile.is-vertical
       @media only screen and (max-width: $breakpoint-mini-screen)
-        width: 100%
+        width: 170%
 
       .tile.is-parent
         padding-right: $pr-0
@@ -95,6 +95,9 @@
 .container
   .right-tile
     padding-left: $pl-0
+    @media only screen and (max-width: $breakpoint-mini-screen)
+      width: 170%
+      padding: .75rem
 
     .content
       .content
