--- a/css/header.css
+++ b/css/header.css
@@ -236,3 +236,9 @@ input#search {
     font-size: 30px;
     margin-top: 3px;
 }
+
+@media screen and (max-width: 768px) {
+    .header-title h2 {
+        font-size: 12px!important;
+    }
+}
